--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,34 @@
 .bg-org {
     background-color: #840A54;
-
 }
 
 .text-org {
     color: #840A54;
+}
 
+.preview-proyect {
+    background-color:#385BE8;
+    border-radius: 5px;
+    width: 200px;
+    height: 130px;
+    color: white;
+}
+
+.preview-body {
+    background-color: white;
+    opacity: 0.5;
+    border-radius: 5px;
+    color: black;
+}
+
+.panel-proyecto{
+    border-color: gray;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.list-group{
+    overflow:scroll;
+    height: 300px;
+    
 }
